# periodictable

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  periodic_table.json  periodic_table.rs
