[package]
name = "periodicelements"
version = "0.1.1"
edition = "2021"
authors= ["Asnim Puthenpurayil Ansari<asnim.ansari@gmail.com>"]
description = "A periodic information tool"
repository = "https://github.com/asnimansari/periodictable"
documentation = "https://github.com/asnimansari/periodictable"
readme = "README.md"
homepage = "https://github.com/asnimansari/periodictable"
keywords = ["chemistry", "periodictable"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include-flate = "0.1.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.88"
ascii_table = "4.0.2"

